--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-# .github/workflows/build-deb.yml
 name: Build YouQuality (.deb)
 
 on:
@@ -30,7 +29,7 @@ jobs:
           make clean
           make package
 
-      - name: Upload .deb
+      - name: Upload .deb artifact
         uses: actions/upload-artifact@v4
         with:
           name: YouQuality-deb
